test/files/pos/t1409/OuterInterface.java
public interface OuterInterface {
  public interface InnerInterface {
    public void foo();
  }
 }
