test/files/neg/t2442/MySecondEnum.java
public enum MySecondEnum {
   RED(1), BLUE(2) { public void foo() {} };
   MySecondEnum(int i) {}

  public void foo() {}
}